--- a/src/shared/ui/Header/Header.module.css
+++ b/src/shared/ui/Header/Header.module.css
@@ -5,7 +5,7 @@
     background-color: var(--background-color);
     top: 0;
     border-bottom: 1px solid #d8dbdf;
-    z-index: 1;
+    /* z-index: 1; */
     display: flex;
     justify-content: space-between;
 }
