--- a/src/features/Cart/ui/CartItem/CartItem.module.css
+++ b/src/features/Cart/ui/CartItem/CartItem.module.css
@@ -1,10 +1,12 @@
 .wrapper {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     gap: 5%;
     color: var(--text-color);
     background-color: var(--background-color);
     border-color: var(--border-color);
+    padding: 5px;
 }
 
 .imageWrapper {
@@ -17,13 +19,14 @@
 }
 
 .infoWrapper {
+    flex-grow: 1;
     display: flex;
     align-items: center;
     gap: 5%;
 }
 
 .title {
-    white-space:nowrap;
+    white-space: nowrap;
 }
 
 .cartWrapper {
@@ -41,6 +44,7 @@
 
 .price {
     white-space: nowrap;
+    min-width: 10ch;
 }
 
 .removeWrapper {
