--- a/src/pages/CategoriesScreen/CategoriesEditScreen.module.css
+++ b/src/pages/CategoriesScreen/CategoriesEditScreen.module.css
@@ -8,7 +8,8 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    height: '100%';
+    height: 100%;
+    overflow: hidden;
 }
 
 .content {
@@ -28,4 +29,17 @@
 .addButton:active {
     background-color: var(--active-color);
     /* transform: scale(0.95); */
+}
+
+.footer {
+    padding: 5px;
+    color: var(--text-color);
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: row;
+  }
+  
+.error {
+  color: red;
+  flex-grow: 1;
 }
