--- a/src/shared/ui/Modal/Modal.module.css
+++ b/src/shared/ui/Modal/Modal.module.css
@@ -12,7 +12,7 @@
 
 .modal_box {
   display: block;
-  background: white;
+  background: var(--background-color);
   width: 50%;
   height: 70%;
   padding: 1rem;
@@ -29,7 +29,7 @@
   text-decoration: none;
   font-size: 1em;
   box-sizing: border-box;
-  background-color: black;
+  background-color: var(--text-color);
   cursor: pointer;
   clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
 }
