--- a/src/pages/ProductsScreen/ProductsEditScreen.module.css
+++ b/src/pages/ProductsScreen/ProductsEditScreen.module.css
@@ -31,15 +31,24 @@
     /* transform: scale(0.95); */
 }
 
+.header {
+    padding: 5px 40px;
+    color: var(--text-color);
+    background-color: var(--background-color);
+    border-bottom: 1px solid #d8dbdf;
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer {
     padding: 5px;
     color: var(--text-color);
     background-color: var(--background-color);
     display: flex;
     flex-direction: row;
-  }
-  
+}
+
 .error {
-  color: red;
-  flex-grow: 1;
+    color: red;
+    flex-grow: 1;
 }
