--- a/src/pages/RootScreen/RootScreen.module.css
+++ b/src/pages/RootScreen/RootScreen.module.css
@@ -1,7 +1,11 @@
-.tabItem{
-    display: 'flex';
-    flex-direction: 'row';
-    justify-content: 'space-between';
-    justify-self: 'center';
-    width: '300px';
+.tab {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+}
+
+.tabItem {
+    color: var(--text-color);
 }
