--- a/src/entities/Category/ui/CategoryItem/CategoryItem.module.css
+++ b/src/entities/Category/ui/CategoryItem/CategoryItem.module.css
@@ -1,16 +1,29 @@
 .wrapper {
-    min-width: 150px;
-    max-width: 300px;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    border-color: var(--border-color);
+  width: 250px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid var(--border-color);
+  padding: 20px;
+  transition: transform 0.3s ease-in-out;
+  background-color: var(--background-color);
+}
+  
+.wrapper:hover {
+  transform: translateY(-5px);
 }
 
 .image {
-    max-width: 100%;
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
 }
 
-.title {
-    text-align: left;
-    text-indent: 5%;
+.title h3 {
+  font-size: 1.2rem;
+  text-align: center;
+  color: var(--text-color);
+  margin: 10px 0;
 }
