--- a/src/entities/Product/ui/ProductItem/ProductItem.module.css
+++ b/src/entities/Product/ui/ProductItem/ProductItem.module.css
@@ -1,32 +1,50 @@
-.wrapper{
-    min-width: 150px;
-    max-width: 300px;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    border-color: var(--border-color);
+.wrapper {
+  width: 250px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid var(--border-color);
+  padding: 20px;
+  background-color: var(--background-color);
+  transition: transform 0.3s ease-in-out;
 }
 
-.image{
-    max-width: 100%;
+.wrapper:hover {
+  transform: translateY(-5px);
 }
 
-.title {
-    text-align: left;
-    text-indent: 5%;
+.image {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+}
+
+.title h3 {
+  font-size: 1.2rem;
+  text-align: center;
+  color: var(--text-color);
+  margin: 10px 0;
 }
 
 .price {
-    text-align: right;
-    white-space: nowrap;
-}
-
-.description {
-    text-align: justify;
-}
+    font-weight: bold;
+    color: var(--text-color);
+    font-size: 1.2rem;
+  }
+  
+  .description p {
+    max-height: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    overflow-wrap: break-word;
+  }
 
 .button {
-    /* float: right; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
