--- a/src/pages/AuthScreen/SignUp/SignUp.module.css
+++ b/src/pages/AuthScreen/SignUp/SignUp.module.css
@@ -1,40 +1,41 @@
 .form {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    border-color: var(--border-color);
-    padding: 20px;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  border-color: var(--border-color);
+  padding: 20px;
 }
 
 .title {
-    font-size: 1.25rem;
-    margin-bottom: 10px;
+  font-size: 1.25rem;
+  margin-bottom: 10px;
 }
 
 .label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 .error {
-    color: red;
+  color: red;
 }
 
 .input,
 .textarea {
-    /* color: var(--text-color);
-      background-color: var(--background-color);
-      border-color: var(--border-color); */
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid;
+  /* border-color: var(--border-color); */
+  color: var(--text-color);
+  background-color: var(--background-color);
+  background: transparent;
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid;
 }
 
 .button {
-    /* color: var(--text-color);
-    background-color: lightblue; */
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
+  /* color: var(--text-color);
+  background-color: lightblue; */
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
 }
