--- a/src/pages/ProfileScreen/ChangePassword/ChangePassword.module.css
+++ b/src/pages/ProfileScreen/ChangePassword/ChangePassword.module.css
@@ -22,9 +22,10 @@
 
 .input,
 .textarea {
-  /* color: var(--text-color);
-    background-color: var(--background-color);
-    border-color: var(--border-color); */
+  /* border-color: var(--border-color); */
+  color: var(--text-color);
+  background-color: var(--background-color);
+  background: transparent;
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
