--- a/src/features/forms/ProductEditForm/ProductEditForm.module.css
+++ b/src/features/forms/ProductEditForm/ProductEditForm.module.css
@@ -18,15 +18,18 @@
 .input,
 .textarea,
 .select {
-  /* border-color: var(--border-color); */
-  color: var(--text-color);
-  background-color: var(--background-color);
-  background: transparent;
+  /* color: var(--text-color);
+        background-color: var(--background-color);
+        border-color: var(--border-color); */
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
   border: none;
   outline: none;
+  background: transparent;
+  cursor: pointer;
+  color: var(--text-color);
+  background-color: var(--background-color);
 }
 
 .button {
