--- a/src/pages/CatalogScreen/CatalogScreen.module.css
+++ b/src/pages/CatalogScreen/CatalogScreen.module.css
@@ -1,3 +1,9 @@
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
 .item {
     /* display: flex;
     flex-wrap: wrap;
